--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "antd": "^4.18.9",
+    "d3": "^7.3.0",
     "golden-layout": "^1.5.6",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
